Co-authored-by: Flammableobject <Flammableobject@users.noreply.github.com> Co-authored-by: Jakkapong-Karndee <Jakkapong-Karndee@users.noreply.github.com> Co-authored-by: LMaY14 <LMaY14@users.noreply.github.com>

--- a/change_password.html
+++ b/change_password.html
@@ -16,6 +16,10 @@
 
           <p><label for="psw"><b>Confirm new password</b></label>
           <input type="password" placeholder="Confirm new password" name="psw" required></p>
+
+          <button type="submit">Submit</button>
+
+          <button type='button'>Back</button>
      </div>
 </body>
 </html>      
