--- a/requestleave_menu.html
+++ b/requestleave_menu.html
@@ -3,7 +3,6 @@
 
 <head>
   <title>Request Leave</title>
-  <link rel="stylesheet" href="default.css">
 </head>
 
 <body>
@@ -11,7 +10,7 @@
       <div class="container">
         <button type="Button">New Request</button>
         <button type="Button">Request Status</button>
-        <button type ='button'>Back</button>
+        <button onclick="history.go(-1);">Back </button>
       </div>
 
 </body>
