--- a/requestleave_menu.html
+++ b/requestleave_menu.html
@@ -8,7 +8,7 @@
 <body>
   <h2>Request leave<h2>
       <div class="container">
-        <button type="Button">New Request</button>
+        <a class="btn btn-primary" href="requestleave_form.php">New Request</a>
         <button type="Button">Request Status</button>
         <button onclick="history.go(-1);">Back </button>
       </div>
