--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <form action="action_page.php" method="post">
+    <form action="login.php" method="post">
         <div class="imgcontainer">
           <img src="logo.jpg" alt="logo" class="logo">
         </div>
@@ -18,7 +18,7 @@
         <h2><label for="psw"><b>Password</b></label>
           <input type="password" placeholder="Enter Password" name="psw" required></h2>
 
-                <a class="btn btn-primary" href="main.php">Login</a>
+                <button type = "submit" class ="btn btn-primary" >Login</button>
         </div>
       
         <div class="containerlogin" style="background-color:#f1f1f1">
