combined and fixed many bugs

--- a/requestleave_menu.html
+++ b/requestleave_menu.html
@@ -8,9 +8,9 @@
 <body>
   <h2>Request leave<h2>
       <div class="container">
-        <a class="btn btn-primary" href="requestleave_form.php">New Request</a>
-        <button type="Button">Request Status</button>
-        <button onclick="history.go(-1);">Back </button>
+        <a href="requestleave_form.php"><button type="Button">New Request</button></a>
+        <a href="leaving_status.php"><button type="Button">Request Status</button></a>
+        <a href= "main.php"><button >Back </button></a>
       </div>
 
 </body>
