--- a/requestleave_menu.html
+++ b/requestleave_menu.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
 <html>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <head>
-  <title>Request Leave</title>
-</head>
+  <title>main page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    type="text/css">
+  <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
+
+  <head>
+    <title>Request Leave</title>
+  </head>
 
 <body>
-  <h2>Request leave<h2>
-      <div class="container">
-        <a href="requestleave_form.php"><button type="Button">New Request</button></a>
-        <a href="leaving_status.php"><button type="Button">Request Status</button></a>
-        <a href= "main.php"><button >Back </button></a>
+  <div class="py-5 text-center" style="background-color:#f6b915">
+    <div class="container " style="background-color: #f0f7ff;">
+      <div class="row">
+        <div class="col-md-12" style="background-color: #97b9b5;">
+          <h2 class="display-4" style="color: white;font-family: 'Segoe Print';"><img src="image/menu.png" width="50px" height="50px"> Request leave<h2>
+
+        </div>
       </div>
+      <br><br>
+    <div class="container align-items-center" style="background-color: #f0f7ff;">
+      <a href="requestleave_form.php"><button class="btn btn-primary" style="color:white;font-family: 'Lucida Sans';font-size: 16px;" type="Button">New Request</button></a>      <br><br><br><br>
+
+      <a href="leaving_status.php"><button class="btn btn-primary" style="color:white;font-family: 'Lucida Sans';font-size: 16px;" type="Button">Request Status</button></a>      <br><br><br><br>
+
+      <a href="main.php"><button class="btn btn-dark" style="color:white;font-family: 'Lucida Sans';font-size: 16px;" >Back </button></a><br><br><br>
+    </div></div>
+    
+
+    
+
+  </div>
+
+
 
 </body>
 
